editor/tree-sitter-gsx/test/corpus/basic.txt
================================================================================
Package declaration
================================================================================

package main

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (identifier)))

================================================================================
Single import
================================================================================

package main

import "fmt"

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (identifier))
  (import_section
    (import_declaration
      (import_spec
        path: (string)))))

================================================================================
Simple component
================================================================================

t1 Header(title string) {
	<div><span>{title}</span></div>
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (identifier))))
    body: (component_body
      (element
        (element_with_children
          tag: (identifier)
          (element
            (element_with_children
              tag: (identifier)
              (go_expression
                (expression_content))
              (identifier)))
          (identifier))))))

================================================================================
Component with no parameters
================================================================================

t1 Footer() {
	<div></div>
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (element
        (element_with_children
          tag: (identifier)
          (identifier))))))

================================================================================
Self-closing element
================================================================================

t1 Spacer() {
	<hr />
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (element
        (self_closing_element
          tag: (identifier))))))

================================================================================
Component call
================================================================================

t1 App() {
	@Header("Title")
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (component_call
        name: (identifier)
        arguments: (argument_list
          (string))))))

================================================================================
For loop
================================================================================

t1 List(items []string) {
	for i, item := range items {
		<span>{item}</span>
	}
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (slice_type
            (type_expression
              (identifier))))))
    body: (component_body
      (for_statement
        clause: (for_clause
          index: (identifier)
          value: (identifier)
          collection: (identifier))
        body: (block
          (element
            (element_with_children
              tag: (identifier)
              (go_expression
                (expression_content))
              (identifier))))))))

================================================================================
If statement
================================================================================

t1 Conditional(show bool) {
	if show {
		<span>Visible</span>
	}
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (identifier))))
    body: (component_body
      (if_statement
        condition: (identifier)
        consequence: (block
          (element
            (element_with_children
              tag: (identifier)
              (text_content)
              (identifier))))))))

================================================================================
Let binding
================================================================================

t1 WithLet() {
	header := <span>Title</span>
	<div>{header}</div>
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (let_binding
        name: (identifier)
        value: (element
          (element_with_children
            tag: (identifier)
            (text_content)
            (identifier))))
      (element
        (element_with_children
          tag: (identifier)
          (go_expression
            (expression_content))
          (identifier))))))

================================================================================
Comments
================================================================================

// Single line comment
package main

t1 Test() {
	<span>Hello</span>
}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (package_clause
    name: (identifier))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (element
        (element_with_children
          tag: (identifier)
          (text_content)
          (identifier))))))

================================================================================
Grouped imports
================================================================================

package main

import (
	"fmt"
	"strings"
)

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (identifier))
  (import_section
    (import_declaration
      (import_spec_list
        (import_spec
          path: (string))
        (import_spec
          path: (string))))))

================================================================================
If-else statement
================================================================================

t1 ConditionalElse(show bool) {
	if show {
		<span>Yes</span>
	} else {
		<span>No</span>
	}
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (identifier))))
    body: (component_body
      (if_statement
        condition: (identifier)
        consequence: (block
          (element
            (element_with_children
              tag: (identifier)
              (text_content)
              (identifier))))
        alternative: (block
          (element
            (element_with_children
              tag: (identifier)
              (text_content)
              (identifier))))))))

================================================================================
Qualified type parameter
================================================================================

t1 WithLayout(dir layout.Direction) {
	<div></div>
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (qualified_type
            (identifier)
            (identifier)))))
    body: (component_body
      (element
        (element_with_children
          tag: (identifier)
          (identifier))))))

================================================================================
Element with attributes
================================================================================

t1 Box() {
	<div border={true} padding={2}>
		<span>Content</span>
	</div>
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (element
        (element_with_children
          tag: (identifier)
          (attribute
            name: (identifier)
            value: (go_expression
              (expression_content)))
          (attribute
            name: (identifier)
            value: (go_expression
              (expression_content)))
          (element
            (element_with_children
              tag: (identifier)
              (text_content)
              (identifier)))
          (identifier))))))

================================================================================
Ref attribute on element
================================================================================

t1 Layout() {
	<div ref={main}></div>
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (element
        (element_with_children
          tag: (identifier)
          (attribute
            name: (identifier)
            value: (go_expression
              (expression_content)))
          (identifier))))))

================================================================================
Ref attribute on self-closing element
================================================================================

t1 WithRef() {
	<hr ref={divider} />
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (element
        (self_closing_element
          tag: (identifier)
          (attribute
            name: (identifier)
            value: (go_expression
              (expression_content))))))))

================================================================================
State declaration
================================================================================

t1 Counter() {
	count := tui.NewState(0)
	<span>{count}</span>
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (state_declaration
        name: (identifier)
        initializer: (call_expression
          (selector_expression
            (identifier)
            (identifier))
          (argument_list
            (number))))
      (element
        (element_with_children
          tag: (identifier)
          (go_expression
            (expression_content))
          (identifier))))))

================================================================================
Event handler attributes
================================================================================

t1 Button() {
	<button onClick={handleClick}>Click</button>
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (element
        (element_with_children
          tag: (identifier)
          (attribute
            name: (identifier)
            value: (go_expression
              (expression_content)))
          (text_content)
          (identifier))))))

================================================================================
Element with ref attribute and other attributes
================================================================================

t1 Card() {
	<div ref={header} class="font-bold"></div>
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (component_body
      (element
        (element_with_children
          tag: (identifier)
          (attribute
            name: (identifier)
            value: (go_expression
              (expression_content)))
          (attribute
            name: (identifier)
            value: (string))
          (identifier))))))

================================================================================
Map type in struct field
================================================================================

type Config struct {
	Models map[string][]string
}

--------------------------------------------------------------------------------

(source_file
  (type_struct_declaration
    name: (identifier)
    body: (struct_body
      (struct_field
        name: (identifier)
        type: (type_expression
          (map_type
            (type_expression
              (identifier))
            (type_expression
              (slice_type
                (type_expression
                  (identifier))))))))))

================================================================================
Func type in struct field
================================================================================

type Handler struct {
	onClose func()
}

--------------------------------------------------------------------------------

(source_file
  (type_struct_declaration
    name: (identifier)
    body: (struct_body
      (struct_field
        name: (identifier)
        type: (type_expression
          (func_type))))))

================================================================================
Multiline parameters with trailing comma
================================================================================

func Create(
	name string,
	items []string,
	lookup map[string][]string,
	callback func(),
) {
	return
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (identifier)))
      (parameter
        name: (identifier)
        type: (type_expression
          (slice_type
            (type_expression
              (identifier)))))
      (parameter
        name: (identifier)
        type: (type_expression
          (map_type
            (type_expression
              (identifier))
            (type_expression
              (slice_type
                (type_expression
                  (identifier)))))))
      (parameter
        name: (identifier)
        type: (type_expression
          (func_type))))
    body: (function_body
      (go_code_content))))

================================================================================
Tuple return type
================================================================================

func split(s string) (string, string) {
	return s, s
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (identifier))))
    return_type: (return_type
      (type_expression
        (identifier))
      (type_expression
        (identifier)))
    body: (function_body
      (go_code_content))))

================================================================================
Func type in struct field with single return
================================================================================

type HandlerWithResult struct {
	onClose func() string
}

--------------------------------------------------------------------------------

(source_file
  (type_struct_declaration
    name: (identifier)
    body: (struct_body
      (struct_field
        name: (identifier)
        type: (type_expression
          (func_type
            (return_type
              (type_expression
                (identifier)))))))))

================================================================================
Func type in params with returns
================================================================================

func CreateWithCallbacks(cb func() string, mk func(int) (bool, error)) {
	return
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_expression
          (func_type
            (return_type
              (type_expression
                (identifier))))))
      (parameter
        name: (identifier)
        type: (type_expression
          (func_type
            (type_expression
              (identifier))
            (return_type
              (type_expression
                (identifier))
              (type_expression
                (identifier)))))))
    body: (function_body
      (go_code_content))))
